--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "chance": "^1.1.11",
+    "dotenv": "^16.3.1",
     "eslint": "^8.29.0",
     "express": "^4.17.1",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   }
 }
